tests/baselines/reference/nodeModulesImportMeta(module=nodenext).errors.txt
error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
tests/cases/conformance/node/subfolder/index.ts(2,11): error TS1470: The 'import.meta' meta-property is not allowed in files which will build into CommonJS output.


!!! error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
==== tests/cases/conformance/node/subfolder/index.ts (1 errors) ====
    // cjs format file
    const x = import.meta.url;
              ~~~~~~~~~~~
!!! error TS1470: The 'import.meta' meta-property is not allowed in files which will build into CommonJS output.
    export {x};
==== tests/cases/conformance/node/index.ts (0 errors) ====
    // esm format file
    const x = import.meta.url;
    export {x};
==== tests/cases/conformance/node/package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== tests/cases/conformance/node/subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }